; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_rcutorture.c_rcu_torture_stutter.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_rcutorture.c_rcu_torture_stutter.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [33 x i8] c"rcu_torture_stutter task started\00", align 1
@stutter = common dso_local global i32 0, align 4
@HZ = common dso_local global i32 0, align 4
@stutter_pause_test = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [20 x i8] c"rcu_torture_stutter\00", align 1
@.str.2 = private unnamed_addr constant [34 x i8] c"rcu_torture_stutter task stopping\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @rcu_torture_stutter to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rcu_torture_stutter(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = call i32 @VERBOSE_PRINTK_STRING(i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str, i64 0, i64 0))
  br label %4

4:                                                ; preds = %18, %1
  %5 = load i32, i32* @stutter, align 4
  %6 = load i32, i32* @HZ, align 4
  %7 = mul nsw i32 %5, %6
  %8 = call i32 @schedule_timeout_interruptible(i32 %7)
  store i32 1, i32* @stutter_pause_test, align 4
  %9 = call i32 (...) @kthread_should_stop()
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %16, label %11

11:                                               ; preds = %4
  %12 = load i32, i32* @stutter, align 4
  %13 = load i32, i32* @HZ, align 4
  %14 = mul nsw i32 %12, %13
  %15 = call i32 @schedule_timeout_interruptible(i32 %14)
  br label %16

16:                                               ; preds = %11, %4
  store i32 0, i32* @stutter_pause_test, align 4
  %17 = call i32 @rcutorture_shutdown_absorb(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.1, i64 0, i64 0))
  br label %18

18:                                               ; preds = %16
  %19 = call i32 (...) @kthread_should_stop()
  %20 = icmp ne i32 %19, 0
  %21 = xor i1 %20, true
  br i1 %21, label %4, label %22

22:                                               ; preds = %18
  %23 = call i32 @VERBOSE_PRINTK_STRING(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.2, i64 0, i64 0))
  ret i32 0
}

declare dso_local i32 @VERBOSE_PRINTK_STRING(i8*) #1

declare dso_local i32 @schedule_timeout_interruptible(i32) #1

declare dso_local i32 @kthread_should_stop(...) #1

declare dso_local i32 @rcutorture_shutdown_absorb(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
